[package]
name = "yew-sc"
version = "0.1.0"
edition = "2024"
description = "Styled Components for Yew"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
yew-sc-core = { path = "yew-sc-core", version = "0.1.0" }
yew-sc-macros = { path = "yew-sc-macros", version = "0.1.0" }
yew = { version = "0.23", features = ["csr"] }

[workspace]
members = ["yew-sc-core", "yew-sc-macros", "example"]
