[package]
name = "yew-sc"
version = "0.1.0"
edition = "2024"
description = "Styled components for Yew — compile-time CSS validation, hashed classes, dynamic styles via CSS custom properties, and optional static stylesheet extraction."
authors = ["Pierre Portal <pierreportal@proton.me>"]
license = "MIT"
repository = "https://github.com/pierreportal/yew-sc"
homepage = "https://github.com/pierreportal/yew-sc"
documentation = "https://docs.rs/yew-sc"
readme = "README.md"
keywords = ["yew", "css", "styled-components", "wasm", "frontend"]
categories = ["gui", "web-programming", "wasm"]

[lib]
path = "src/lib.rs"

[features]
default = []
# Drop the runtime style registry. The macro still bakes every CSS rule into
# a `yew_sc_css` wasm custom section so the `yew-sc-extract` xtask can pull
# them into a static `.css` file at build time.
static-extract = ["yew-sc-core/static-extract"]

[dependencies]
yew-sc-core = { path = "yew-sc-core", version = "0.1.0" }
yew-sc-macros = { path = "yew-sc-macros", version = "0.1.0" }
yew = { version = "0.23", features = ["csr"] }

[workspace]
members = ["yew-sc-core", "yew-sc-macros", "example"]
