[package]
name = "yew-sc-core"
version = "0.1.0"
edition = "2024"
description = "Runtime helpers for yew-sc: style registry and ToCssVar trait."
authors = ["Pierre Portal <pierreportal@proton.me>"]
license = "MIT"
repository = "https://github.com/pierreportal/yew-sc"
homepage = "https://github.com/pierreportal/yew-sc"
keywords = ["yew", "css", "styled-components", "wasm", "frontend"]
categories = ["gui", "web-programming", "wasm"]

[features]
default = []
# Disables the runtime style registry. Use with the `yew-sc-extract` xtask,
# which extracts compile-time CSS from the built wasm into a static .css file.
static-extract = []

[dependencies]
yew = "0.23.0"
web-sys = "0.3.95"
syn = {version = "2.0.117", features = ["full"]}
