[package]
name = "yew-sc-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for yew-sc: parser and codegen for `styled_component!`."
authors = ["Pierre Portal <pierreportal@proton.me>"]
license = "MIT"
repository = "https://github.com/pierreportal/yew-sc"
homepage = "https://github.com/pierreportal/yew-sc"
keywords = ["yew", "css", "styled-components", "macro", "proc-macro"]
categories = ["gui", "web-programming", "wasm"]

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.117", features = ["full"]}
quote = "1"
proc-macro2 = "1"
yew = "0.23.0"
# yew-sc-core = {path = ".."}
